# Modular

./: .README.md.kate-swp  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
include/: Config.h  GameBanana.h  HTTPClient.h  NexusMods.h  Rename.h
scripts/: nexus_scraper.py
src/: Config.cpp  GameBanana.cpp  HTTPClient.cpp  NexusMods.cpp  Rename.cpp  main.cpp  scraper-concept.py
